[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hookbase"
dynamic = ["version"]
description = "Official Python SDK for the Hookbase webhook management platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Hookbase", email = "support@hookbase.app" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.25.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://hookbase.app"
Documentation = "https://docs.hookbase.app/sdk/python"
Repository = "https://github.com/hookbase/hookbase-python"
Issues = "https://github.com/hookbase/hookbase-python/issues"

[tool.hatch.version]
path = "src/hookbase/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hookbase"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
# list() method on resource classes shadows builtins.list in deferred
# annotations (from __future__ import annotations), causing false positives.
disable_error_code = ["valid-type"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
